src/objects/Job_Performance_Log__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Descriptation__c</fullName>
        <label>Job Descriptation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_End_Time__c</fullName>
        <label>Job End Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Start_Time__c</fullName>
        <label>Job Start Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result_Descriptation__c</fullName>
        <label>Result Descriptation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SuccessOrNot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SuccessOrNot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Number__c</fullName>
        <label>Success Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Performance Log</label>
    <nameField>
        <label>Job Performance Log Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>